kubernetes/victoriametrics/overlays/okd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoriametrics
  namespace: victoriametrics
  labels:
    app.kubernetes.io/name: victoriametrics
    app.kubernetes.io/part-of: victoriametrics
    external-dns: enabled
  annotations:
    route.openshift.io/termination: edge
    external-dns.alpha.kubernetes.io/hostname: victoriametrics.garrettholland.com
    external-dns.alpha.kubernetes.io/target: 10.0.0.253
spec:
  ingressClassName: openshift-default
  rules:
    - host: victoriametrics.garrettholland.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoriametrics
                port:
                  name: http
  tls:
    - hosts:
        - victoriametrics.garrettholland.com
      secretName: victoriametrics-tls
